problems/collatz-conjecture/final_run.log
  File "Z:\[Vibe Coded (AI)]\CLAUDECODE\Unresolved Math Problems\problems\collatz-conjecture\defect_spectral_sharp.py", line 289
    (D ΓëÑ 0)
       ^
SyntaxError: invalid character 'ΓëÑ' (U+2265)
